--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script type="module" src='./dist/main.js'></script>
 </head>
 <body>
+    <h1>Aplicación que permite consultar información sobre series de televisión</h1>
     
 </body>
 </html>
